# babs-server

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
src/: routes.rs
src/controller/api/: game.rs  level.rs  mod.rs  score.rs  stats.rs  user.rs
src/models/: game.rs  level.rs  score.rs  stats.rs  user.rs
src/service/: game_service.rs  level_service.rs  score_service.rs  stats_service.rs  user_service.rs
