[package]
name = "babs-server"
version = "0.3.0"
authors = ["Traxx186"]
edition = "2024"
readme = "README.md"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.3", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.3.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }